--- a/css/style.css
+++ b/css/style.css
@@ -321,7 +321,7 @@ a:focus {
   color: #ffffff;
   padding: 45px;
   border-radius: 5px;
-  opacity: 45%;
+  opacity: 0;
 }
 
 .slider_section .detail-box h1 {
